Input search 3 added

--- a/src/global.scss
+++ b/src/global.scss
@@ -18,7 +18,7 @@ $color--text--spruce: #506175;
 $color--text--silver: #cecece;
 $color--disabled--1: #d8d8d8;
 
-// SWITCH/CHECKBOX LABEL
+// SWITCH/CHECKBOX LABEL ======================================================
 $label--active--color: $color--text--dark-sacramento;
 $label--inactive--color: $color--disabled--1;
 
