--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,5 +1,6 @@
 @import "setup/_typography.min.scss";
 
+@import "basics/_base.scss";
 @import "basics/_input.scss";
 @import "basics/_button.scss";
 
