Add blockie , tooltip

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -1,8 +1,9 @@
 * {
-  color: var(--v-info-base);
+  // color: var(--v-info-base);
 }
 
 html,
 body {
   font-family: "Roboto", sans-serif;
+  font-size: 14px;
 }
