--- a/src/assets/styles/basics/_button.scss
+++ b/src/assets/styles/basics/_button.scss
@@ -1,9 +1,11 @@
 .v-application {
+  // v-btn
   .v-btn {
     height: 100% !important;
     width: 100%;
   }
 
+  // disabled button 
   .disabled-btn {
     pointer-events: none;
 
