--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,7 +1,8 @@
-@import "setup/_typography.min.scss";
+@import "setup/_typography.scss";
 
 @import "basics/_base.scss";
 @import "basics/_input.scss";
 @import "basics/_button.scss";
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=PT+Mono&display=swap');
