--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -8,7 +8,7 @@
 
   // input border color
   .theme--light.v-text-field--outlined:not(.v-input--is-focused):not(.v-input--has-state) > .v-input__control > .v-input__slot fieldset {
-    color: var(--v-light-grey-base) !important;
+    color: var(--v-disabled-lighten-2-base) !important;
   }
 
   .v-input {
@@ -20,20 +20,20 @@
 
     // input label
     .v-label {
-      color: var(--v-input-label-base);
+      color: var(--v-basic-label-base);
       font-weight: 500;
       text-transform: capitalize;
     }
 
     // input placeholder
     input::placeholder {
-      color: var(--v-input-placeholder-base);
+      color: var(--v-disabled-base);
       font-family: "Roboto"
     }
 
     // input suffix color
     .v-text-field__suffix {
-      color: var(--v-input-placeholder-base) !important;
+      color: var(--v-input-disabled-base) !important;
     }
 
     // dropdown icon
@@ -52,7 +52,7 @@
     // for search mew input
     &.search-input {
       fieldset {
-        background-color: var(--v-primary-silver-base) !important;
+        background-color: var(--v-disabled-lighten-1-base) !important;
         border: none !important;
         z-index: -1 !important;
       }
