Update dark mode for other components

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -7,3 +7,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 14px;
 }
+
+.bg-white {
+  background-color: var(--v-white-base) !important;
+}
