--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -106,4 +106,13 @@
       }
     }
   }
+
+  // simple menu select 
+  .simple-input.v-text-field>.v-input__control>.v-input__slot:before {
+    border-style: none;
+  }
+
+  .simple-input.v-text-field>.v-input__control>.v-input__slot:after {
+      border-style: none;
+  }
 }
