Fixing content header

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -4,5 +4,5 @@
 @import "basics/_input.scss";
 @import "basics/_button.scss";
 
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap;font-src 'self' https://fonts.gstatic.com data:;");
-@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap;font-src 'self' https://fonts.gstatic.com data:;");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Mono&display=swap");
