Remove dist folder from pkg json obj

--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -71,6 +71,7 @@
     // input placeholder
     input::placeholder {
       color: var(--v-disabled-base);
+      font-family: "Roboto", sans-serif;
       font-weight: 400;
     }
 
