--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,7 +1,7 @@
 
-.mew-address {
-  font-family: "PT Mono";
-}
+// .mew-address {
+//   font-family: "PT Mono";
+// }
 
 .mew-title {
   font-size: 50px;
