--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -32,6 +32,10 @@
   height: 100%;
 }
 
+.column-reverse {
+  flex-direction: column-reverse;
+}
+
 .tooltip-inner {
   background-color: var(--v-white-base) !important;
   border: 1px solid var(--v-inputBorder-base) !important;
