Update button sizes, carousel, font, package v

--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -34,9 +34,9 @@
 }
 
 .mew-caption {
-  font-size: 12px;
-  font-weight: 700;
-  text-transform: uppercase;
+  font-size: 12px !important;
+  font-weight: 700 !important;
+  text-transform: uppercase !important;
 }
 
 .capitalize {
