--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,11 +1,9 @@
 @import "setup/_typography.scss";
+@import "setup/_fonts.scss";
 
 @import "basics/_base.scss";
 @import "basics/_input.scss";
 @import "basics/_button.scss";
-
-@import "fonts/_fonts.scss";
-
 
 html,
 body {
