--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -36,6 +36,11 @@
   flex-direction: column-reverse;
 }
 
+.break-word {
+  white-space: normal;
+  word-wrap: break-word;
+}
+
 .tooltip-inner {
   background-color: var(--v-white-base) !important;
   border: 1px solid var(--v-inputBorder-base) !important;
