--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -2,6 +2,10 @@
   color: var(--v-basic -base);
 }
 
+a {
+  text-decoration: none;
+}
+
 .bg-white {
   background-color: var(--v-white-base) !important;
 }
