--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -46,3 +46,10 @@
 .no-decoration {
   text-decoration: none !important;
 }
+
+.mew-header-block {
+  color: var(--v-titlePrimary-base);
+  font-weight: bold;
+  margin-bottom: 15px;
+  padding-left: 10px;
+}
