Revert font again

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,5 +1,5 @@
 @import "setup/_typography.scss";
-@import "_fonts.scss";
+@import "setup/_fonts.scss";
 
 @import "basics/_base.scss";
 @import "basics/_input.scss";
