Mew button full width bug fix

--- a/src/assets/styles/basics/_button.scss
+++ b/src/assets/styles/basics/_button.scss
@@ -1,7 +1,7 @@
 .v-application {
   // v-btn
   .v-btn.mew-button {
-    flex: auto;
+    //flex: auto;
     text-transform: capitalize;
 
     .v-btn__content {
@@ -9,8 +9,9 @@
     }
   }
 
-  // disabled button 
-  .theme--light.v-btn.mew-button.v-btn--disabled,.theme--dark.v-btn.mew-button.v-btn--disabled {
+  // disabled button
+  .theme--light.v-btn.mew-button.v-btn--disabled,
+  .theme--dark.v-btn.mew-button.v-btn--disabled {
     background-color: var(--v-white-base) !important;
     border: 1px solid var(--v-disabled-base);
     color: var(--v-disabled-base) !important;
@@ -20,5 +21,4 @@
       filter: grayscale(100%);
     }
   }
-
 }
