Update codepen and docs

--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -9,3 +9,29 @@
     height: 80px;
   }
 }
+
+#story--mewbutton--outline-button {
+  .v-application {
+    height: 80px;
+  }
+}
+
+#story--mewbutton--transparent-button {
+  .v-application {
+    height: 80px;
+  }
+}
+
+#story--mewbutton--icon-button {
+  .v-application {
+    height: 80px;
+  }
+}
+
+
+#story--mewbutton--icon-title-button {
+  .v-application {
+    height: 80px;
+  }
+}
+
