Update packages, update docs and update mew super btn

--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -35,3 +35,15 @@
   }
 }
 
+#story--blockie--blockie {
+  .v-application {
+    height: 250px;
+  }
+}
+
+
+#story--warningsheet--warning-sheet {
+  .v-application {
+    height: 250px;
+  }
+}
