Update mew super btn doc

--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -1,3 +1,20 @@
+#story--mewsuperbutton--mew-super-button {
+  height: 250px;
+}
+
+#story--mewsuperbutton--column-button {
+  height: 250px;
+}
+
+#story--mewsuperbutton--icon-button {
+  height: 250px;
+}
+
+#story--mewsuperbutton--content-slot-button {
+  height: 250px;
+}
+
+
 #story--mewbanner--mew-banner {
   .v-application {
     height: 250px;
