Add watcher, docs and update stepper

--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -78,3 +78,15 @@
     height: 250px;
   }
 }
+
+#story--mewtokencontainer--mew-token-container {
+  .v-application {
+    height: 100px;
+  }
+}
+
+#story--mewtoast--mew-toast {
+  .v-application {
+    height: 250px;
+  }
+}
