--- a/stories/GlobalStorybook.scss
+++ b/stories/GlobalStorybook.scss
@@ -90,3 +90,34 @@
     height: 250px;
   }
 }
+
+
+#story--mewstepper--mew-stepper {
+  .v-application {
+    height: 250px;
+  }
+}
+
+#story--mewtoggle--mew-toggle {
+  .v-application {
+    height: 250px;
+  }  
+}
+
+#story--mewpopup--mew-popup {
+  .v-application {
+    height: 250px;
+  }
+}
+
+#story--mewnotification--mew-notification {
+  .v-application {
+    height: 250px;
+  }
+}
+
+#story--mewmodule--mew-module {
+  .v-application {
+    height: 250px;
+  }
+}
