--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -13,7 +13,9 @@ a {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
+.no-display {
+  display: none;
+}
 .no-pointer-events {
   pointer-events: none;
 }
