--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,6 +1,6 @@
-@import "setup/_typography.scss";
 @import "setup/_fonts.scss";
 
+@import "basics/_typography.scss";
 @import "basics/_base.scss";
 @import "basics/_input.scss";
 @import "basics/_button.scss";
