update mew components

--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -8,6 +8,10 @@ a {
   background-color: var(--v-white-base) !important;
 }
 
+.break-word {
+  word-break: break-word;
+}
+
 .truncate {
   white-space: nowrap;
   overflow: hidden;
