--- a/src/assets/styles/basics/_input.scss
+++ b/src/assets/styles/basics/_input.scss
@@ -5,7 +5,7 @@
       border-left: 1px solid var(--v-dropdownBorder-base);
       border-radius: 4px;
       border-right: 1px solid var(--v-dropdownBorder-base);
-      box-shadow: none;
+      box-shadow: 0px 5px 5px -3px rgb(13 41 66 / 20%), 0px 8px 10px 1px rgb(13 41 66 / 14%), 0px 3px 14px 2px rgb(13 41 66 / 12%);
   }
 
   // dropdown, select menu
@@ -25,7 +25,7 @@
   
   .v-menu__content {
     border: 1px solid var(--v-dropdownBorder-base);
-    box-shadow: none;
+    box-shadow: 0px 5px 5px -3px rgb(13 41 66 / 20%), 0px 8px 10px 1px rgb(13 41 66 / 14%), 0px 3px 14px 2px rgb(13 41 66 / 12%);
   }
 
   // input disable theme
